# hot-events-radar

./: README.md  pyproject.toml
hot_events_radar/: __init__.py  api.py  dedupe.py  schema.py  scorer.py
hot_events_radar/detectors/: __init__.py  company.py  macro.py  social.py
hot_events_radar/sources/: __init__.py  earnings_cal.py  halts.py  pr_wire.py  sec_edgar.py
tests/: conftest.py  test_api.py  test_dedupe.py  test_earnings.py  test_halts.py  test_pr_wire.py  test_schema.py  test_scorer.py  test_sec_edgar.py
tests/fixtures/: sample_8k.xml  sample_bw.xml  sample_earnings.json  sample_halts.xml
